--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --configuration production",
+    "build": "npx ng build --configuration production",
     "build:ssr": "ng build --configuration production && ng run autowash-hub:server:production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -12,10 +12,13 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^19.2.4",
     "@angular/animations": "^19.2.4",
     "@angular/cdk": "^19.2.7",
+    "@angular/cli": "^19.2.4",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
+    "@angular/compiler-cli": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.0",
     "@angular/material": "^19.2.7",
@@ -29,12 +32,10 @@
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "typescript": "~5.7.2",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.4",
-    "@angular/cli": "^19.2.4",
-    "@angular/compiler-cli": "^19.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
@@ -44,7 +45,6 @@
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2"
+    "karma-jasmine-html-reporter": "~2.1.0"
   }
 }
